add javassist and create classloader